--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,15 @@ body {
   text-align: center;
 }
 
+.stretch {
+letter-spacing: 3px;}
+
 .underline{
   text-decoration: underline;
+}
+
+.itallics {
+  font-style: italic;
 }
 
 .textsize-medium p {
@@ -23,6 +30,10 @@ body {
   margin-top:10px;
   margin-bottom: 10px
 }
+.spacer20  {
+  margin-top:20px;
+  margin-bottom: 20px
+}
 .spacer40  {
   margin-top:40px;
   margin-bottom: 40px
@@ -41,4 +52,8 @@ body {
 
 .orange{
   color:#dd7016;
+}
+
+.navylblue {
+  color: #254594;
 }
