Page 2 content styled. ReadME updated.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,11 @@ body {
   text-align: center;
 }
 
-.stretch {
-letter-spacing: 3px;}
+.stretch1 {
+letter-spacing: 5px;}
+
+.stretch2 {
+letter-spacing: 10px;}
 
 .underline{
   text-decoration: underline;
@@ -13,11 +16,16 @@ letter-spacing: 3px;}
   font-style: italic;
 }
 
-.textsize-medium p {
+.mediumFont p {
   font-size:  20px;
 }
 
-.largeFont {
+.largeFont1{
+  font-size: 30px;
+  margin-bottom: 5px;
+}
+
+.largeFont2 {
   font-size: 40px;
   margin-bottom: 5px;
 }
@@ -46,6 +54,10 @@ letter-spacing: 3px;}
   margin-bottom: 80px;
 }
 
+.spacertop10{
+  margin-top:10px;
+}
+
 .green {
   color:#259434;
 }
@@ -56,4 +68,16 @@ letter-spacing: 3px;}
 
 .navylblue {
   color: #254594;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-gap: 200px;
+  justify-content: center;
+}
+.orderNow {
+  font-size: 25px;
+  font-style: italic;
+
 }
