page one complete.

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -23,6 +23,34 @@
 
 body {
   text-align: center;
+  font-size: 25px;
+}
+
+.largeFont1em {
+  font-size: 1.5em;
+}
+.largeFont175em {
+  font-size: 1.75em;
+}
+.largeFont2em{
+  font-size:  2.0em;
+}
+.largeFont3em{
+  font-size: 2.5em;
+}
+.largeFont4em{
+  font-size: 3.0em;
+}
+.jumpstart {
+  text-align: left;
+  margin-left: 1em;
+}
+.marginleft1em {
+  margin-left: 1em;
+}
+
+.marginleft2em {
+  margin-left: 4.25em;
 }
 
 .green {
@@ -222,9 +250,22 @@ flex-direction: column;
   margin-bottom: 0px;
 }
 
+.spacer005em{
+  margin-top:0.05em;
+  margin-bottom:0.05em;
+}
+.spacer025em{
+  margin-top:0.25em;
+  margin-bottom:0.25em;
+}
 .spacer0 {
   margin-top:0px;
   margin-bottom:0px;
+}
+
+.spacer05em{
+  margin-top: 0.5em;
+  margin-bottom:0.5em;
 }
 
 .spacertop20 {
@@ -251,6 +292,7 @@ flex-direction: column;
   border-style: solid;
   border-color: black;
   width: auto;
+  margin-bottom: 1em;
 }
 
 .paddingBottom {
@@ -281,21 +323,6 @@ padding-bottom: 150px
   transform:rotate(-5deg);
 }
 
-.jumpPadding {
-  padding-left:inherit;
-  transform: scaleX(1.2);
-  text-align: center;
-  padding-right: 600px;
-  padding-left: 100px;
-}
-
-.savingsPadding {
-  padding-left: 100px;
-  transform: scaleX(1.2);
-  text-align: right;
-  padding-right: 425px;
-
-}
 
 .coralText {
   color: #ff8080;
@@ -303,12 +330,4 @@ padding-bottom: 150px
 
 .hotPinkText {
   color: #FF69B4;
-}
-.jumpContainer {
-  height: auto;
-  width: 800px;
-}
-.savingsContainer {
-  height: auto;
-  width: 800px;
 }
