--- a/css/styles2.css
+++ b/css/styles2.css
@@ -62,6 +62,10 @@ body {
   margin-left: 4.25em;
 }
 
+.margintop1em {
+  margin-top: 1em;
+}
+
 .green {
   color:#259434;
 }
@@ -282,6 +286,10 @@ flex-direction: column;
   margin-top:20px;
 }
 
+.spacertop25 {
+  margin-top:25px;
+}
+
 .justify {
   text-align: justify;
 }
@@ -345,6 +353,9 @@ padding-bottom: 150px
 .text34px{
   font-size: 34px;
 }
+.text60px{
+  font-size: 60px;
+}
 
 .underline{
   text-decoration: underline;
@@ -352,4 +363,8 @@ padding-bottom: 150px
 
 .y50percent{
   transform: scaleY(1.5);
+}
+
+.italics {
+  font-style: italic;
 }
