add updated changes.

--- a/css/printStyles.css
+++ b/css/printStyles.css
@@ -404,3 +404,16 @@ font-size: 20px;
   transform: scale(1.5);
 
 }
+
+.flex-container{
+  display: flex;
+  justify-content: center;
+}
+
+.spacertop40{
+  margin-top:40px;
+}
+
+.paddingLeft10 {
+  padding-left: 100px;
+}
